--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Todoapp</title>
+    <title>Todoish</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+  <h1> Todoish</h1>
+  <div>
+    <div>
+      <p><%= notice %></p>
+      <p><%= alert %></p>
+    </div>
+    <%= link_to( 'Logout', destroy_user_session_path ,method: :delete  ) if user_signed_in? %>
+    <%= link_to( 'Login', new_user_session_path  ) unless user_signed_in? %>
+  </div>
     <%= yield %>
   </body>
 </html>
