--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,11 @@
 <h1> Task Index</h1>
 
 <% @tasks.each do |task| %>
-  <h3><%= task.title %><h3>
+  <p><%= task.id %> - 
+  <%= task.title %> - 
+  <%= task.description %> -
+  <%= link_to('View Task Details', task_path(task.id)) %> - 
+  <%= link_to('Delete', task_path(task.id), method: 'delete', data: {confirm: "Are you SURE?"}) %> <p>
 <% end %>
+
+<%= link_to('New Task', new_task_path) %>
