Configure active storage and attach image to task in webapp

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -5,6 +5,8 @@
   <%= form.text_field :title %>
   <%= form.label :description %>
   <%= form.text_area :description %>
+  <%= form.label :image %>
+  <%= form.file_field :image %>
   <%= form.submit "Crear Tarea" %>
 <% end %>
 
