--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,6 +4,7 @@
   <p><%= task.id %> - 
   <%= task.title %> - 
   <%= task.description %> -
+  <%= image_tag task.image.variant(resize: "180x135>") if task.image.attached? %>
   <%= link_to('View Task Details', task_path(task.id)) %> - 
   <%= link_to('Delete', task_path(task.id), method: 'delete', data: {confirm: "Are you SURE?"}) %> <p>
 <% end %>
